# nocb

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  nocb.service  shell.nix
.github/workflows/: release.yaml
clipper/: Cargo.toml
clipper/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: cache.rs  lib.rs  main.rs
pkg/arch/: PKGBUILD
src/: lib.rs  main.rs
