[workspace]
members = ["core", "clipper"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Thread-safe primitives
parking_lot = "0.12"

# Compression
zstd = "0.13"

# Image processing
image = "0.25"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

env_logger = "0.10"

[profile.release]
# Optimize for speed
lto = true
codegen-units = 1
opt-level = 3
strip = true
